// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initial Form Data with "BOOM" 1`] = `
<div
  className="reloading"
>
  []
</div>
`;

exports[`Initial Form Data with "WEB" 1`] = `
<div
  className="test"
>
  [
  "a",
  "b",
  "c"
]
</div>
`;
